@startuml
interface Media
class Series
class Movie
class FileIO
class StartMenu
class MainMenu
class TextUI

StartMenu -- MainMenu
MainMenu-- Media

Media <|-- Series
Media <|-- Movie

MainMenu -- TextUI
MainMenu-- FileIO
StartMenu *-- TextUI

Media : - name
Media : - releaseYear
Media : - category
Media : - rating


Series : - name
Series : - category
Series : - releaseYear
Series : - rating
Series : - season
Series : - episode

Movie : - name
Movie : - category
Movie : - releaseYear
Movie : - rating

StartMenu : + login()
StartMenu : + makeUser()

MainMenu : + search()

@enduml